Update and rename test.yml to test-pre.yml

--- a/.github/workflows/test-pre.yml
+++ b/.github/workflows/test-pre.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Prepare
         run: |
           python -m pip install --upgrade pip
-          python -m pip install exifdate2fs
+          python -m pip install exifdate2fs --pre
           
       - name: Run tests
         run: |
